# nexus

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/app-mcp/: Cargo.toml
crates/app-mcp/src/: main.rs
crates/app-mcp/src/mcp/: mod.rs  server.rs  tools.rs  types.rs
crates/core-domain/: Cargo.toml
crates/core-domain/src/: entities.rs  ports.rs
crates/core-error/: Cargo.toml
crates/core-error/src/: lib.rs
crates/infra-discord/: Cargo.toml
crates/infra-discord/src/: adapter.rs  lib.rs
crates/infra-google/: Cargo.toml
crates/infra-google/src/: adapter.rs  lib.rs
crates/infra-slack/: Cargo.toml
crates/infra-slack/src/: adapter.rs  lib.rs
crates/infra-tdlib/: Cargo.toml  build.rs
crates/infra-tdlib/src/: adapter.rs  auth.rs  client.rs  ffi.rs  lib.rs
crates/infra-whatsapp/: Cargo.toml
crates/infra-whatsapp/src/: adapter.rs  lib.rs
crates/mod-messaging/: Cargo.toml
crates/mod-messaging/src/: format.rs  lib.rs  service.rs
docs/: USAGE.md
tests/: mcp_protocol_test.sh
