[package]
name = "nexus-whatsapp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexus-error = { path = "../core-error" }
nexus-domain = { path = "../core-domain" }
async-trait.workspace = true
reqwest = { workspace = true, features = ["multipart", "stream"] }
tokio = { workspace = true, features = ["fs"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
