[package]
name = "nexus-messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nexus-error = { path = "../core-error" }
nexus-domain = { path = "../core-domain" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true

[lints]
workspace = true
